# fluidsynth-qt-gui

./: CMakeLists.txt  README.md  fluidsynthwrapper.cpp  fluidsynthwrapper.h  main.cpp  mainwindow.cpp  mainwindow.h
